--- a/zgodovina.html
+++ b/zgodovina.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<body>
-
+<body bgcolor=#A5BAF8 >
   <h1>Zgodovina tanka</h1>
 
   <table  style="width: 80%;">
@@ -43,9 +42,6 @@
             </tr>
         </tbody>
     </table>
-
-
-
   
 </body>
 </html>
