--- a/zgodovina.html
+++ b/zgodovina.html
@@ -43,5 +43,11 @@
         </tbody>
     </table>
   
+
+    <h1>Analiza</h1>
+    <div>V povprečju tankamo na {{analiza[0]}} km.</div>
+    <div>Gorivo se {{analiza[1]}}</div>
+    <div>Poraba avtomobila je {{analiza[2]}} l/100km.</div>
+
 </body>
 </html>
