--- a/index2.html
+++ b/index2.html
@@ -3,33 +3,33 @@
 <html>
 
   <body bgcolor="#A5F8D9">
-  
+
     <h1>Poraba goriva</h1>
-  
+
     <form action='/' method="POST">
       Datum (dd.mm.llll): <input type="text" placeholder='DD.MM.LLLL' name="datum" required pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"><br>
-      Koliko smo tankali: <input type="number" name="tank" min="0" max="200" required><br>
-      Stanje stevca: <input type="number" name="stanje" required><br>
-      Trenutna cena goriva: <input type="number" step=0.01 name="cena" min="0" required><br>
+      Koliko smo tankali: <input type="number" name="tank" min="0" max="200" required> l <br>
+      Stanje stevca: <input type="number" name="stanje" required> km<br>
+      Trenutna cena goriva: <input type="number" step=0.01 name="cena" min="0" required> €/l<br>
       <input type="submit" value="Vnesi">
     </form>
-  
+
     <form action="/delete/" method="GET">
       <button type="submit">Razveljavi</button>
     </form>
-  
+
     <form action="/reset/" method="GET">
       <button type="submit">Reset</button>
     </form>
-  
+
     <form action="/prikazi_zgodovino/" method="GET">
       <button type="submit">Prikaži zgodovino</button>
     </form>
-  
-    <form action="/prikazi_analizo/" method="GET">
-      <button type="submit">Prikaži analizo</button>
+
+    <form action="/kalkulator/" method="GET">
+      <button type="submit">Izračun stroškov poti</button>
     </form>
-  
-    
+
+
   </body>
 </html>
