--- a/kalkulator.html
+++ b/kalkulator.html
@@ -7,13 +7,12 @@
         
         <form action='/kalkulator/' method="POST">
             Razdalja: <input type="number" name="razdalja" min="0" required> km<br> 
-            Poraba: <input type="number" name="poraba" required> l/100km<br>
+            Poraba: <input type="number" name="poraba" step=0.01 required> l/100km<br>
             Trenutna cena goriva: <input type="number" step=0.01 name="cena" min="0" required> €/l<br>
             <input type="submit" value="Izračunaj">
         </form>
         <br>
         <div> {{stroski}} </div>
       
-
     </body>
 </html>
